--- a/interview-questions/practice.html
+++ b/interview-questions/practice.html
@@ -371,5 +371,9 @@ console.log(moveDuplicatesRight([4, 5, 6, 4, 3, 6, 2, 2, 7]));
 // 👉 [4, 5, 6, 3, 2, 7, 4, 6, 2]
 
 
+// bubble sort algorithm 
+
+
+
 
 </script>
